clusters/titania/apps/torrents/radarr/radarr-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: nfs-downloads
          persistentVolumeClaim:
            claimName: radarr-downloads-nfs
      containers:
        - name: radarr
          image: ghcr.io/hotio/radarr:nightly-6.4.4.10662 # {"$imagepolicy": "torrents:radarr"}
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - mountPath: /data
              name: nfs-downloads
          resources:
            requests:
              memory: "128Mi"
              cpu: "25m"
            limits:
              memory: "500Mi"
              cpu: "250m"
